Fix contact map covering up the secondary menu
close #6

--- a/sites/all/themes/cas/sass/_main.scss
+++ b/sites/all/themes/cas/sass/_main.scss
@@ -1503,14 +1503,14 @@ body.page-node-47 #content #page-title
 {
 	position: absolute;
 	left: 0;
-	top: 0;
+	top: 52px;
 	width: 100%;
 }
 #contact-info
 {
 	text-align:center;
 	font-size:1.3em;
-	margin-top:175px;
+	margin-top:225px;
 
 	.phone
 	{
